--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ authors = ["Honza Javorek <mail@honzajavorek.cz>"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
+lxml = "^4.5.1"
+cssselect = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^4.6"
